# red-pitaya-notes

./: .gitignore  .prettierignore  Gemfile  ISSUE_TEMPLATE.md  LICENSE  Makefile  README.md  _config.yml  alpine.md  axi-hub.md  axi-interface-buffers.md  components.md  debian-ecosystem.md  defaults.yml  development-machine.md  dma.md  eleventy.config.js  filters.lua  index.md  led-blinker.md  links.md  mcpha.md  metadata.yml  package.json  page.html  playground.md  pulsed-nmr-122-88.md  pulsed-nmr.md  scanner.md  sdr-receiver-122-88.md  sdr-receiver-hpsdr-122-88.md  sdr-receiver-hpsdr.md  sdr-receiver-nodma.md  sdr-receiver-wspr.md  sdr-receiver.md  sdr-transceiver-122-88.md  sdr-transceiver-emb-122-88.md  sdr-transceiver-emb.md  sdr-transceiver-fft.md  sdr-transceiver-ft8-122-88.md  (+11 more)
_data/: layout.js  site.js
_layouts/: default.html  identity.liquid  page.html  redirect.html
adc_dump/: block_design.tcl  system_bd.tcl
adc_reader/: block_design.tcl
base_system/: block_design.tcl
cfg/: clocks.xdc  dds.mem  pins.xdc  ports.tcl  ports.xdc  red_pitaya.xdc  red_pitaya.xml  system_bd.tcl  voltages.xdc
cfg_test/: block_design.tcl
cores/: axi_hub.py  axi_hub.v  axis_accumulator.v  axis_adder.v  axis_alex.v  axis_bram_reader.v  axis_bram_writer.v  axis_counter.v  axis_fifo.v  axis_gate_controller.v  axis_gpio_reader.v  axis_histogram.v  axis_i2s.v  axis_iir_filter.v  axis_keyer.v  axis_lfsr.v  axis_misc_reader.v  axis_misc_writer.v  axis_negator.v  axis_oscilloscope.v  axis_packetizer.v  (+17 more)
projects/sdr_transceiver/SoapyRedPitaya/: CMakeLists.txt  SoapyRedPitaya.cpp
(+1016 files in other folders)
